# angle-shader-translator-library-tracking

./: .gitmodules  CMakeLists.txt  README.md
samples/shader_translator/: shader_translator.cpp
src/: compiler.gni
src/common/: string_utils.cpp
src/compiler/translator/: Common.h  Compiler.h  ShaderLang.cpp
src/compiler/translator/tree_ops/: RewritePixelLocalStorage.cpp
src/compiler/translator/tree_util/: BuiltIn_complete_autogen.h
src/libANGLE/renderer/vulkan/: vk_helpers.cpp
